Fixed favicon issue

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="styles/normalize.css" />
 	<link rel="stylesheet" type="text/css" href="styles/skeleton.css" />
 	<link rel="stylesheet" type="text/css" href="styles/index.css" />
+	<link rel="icon" type= "image/x-icon" href ="https://xwork.space/wynntrans-web/favicon.ico"/>
 	<script src="script.js">
 	</script>
 </head>
